--- a/pc_store/store/templates/store/configure_pc.html
+++ b/pc_store/store/templates/store/configure_pc.html
@@ -9,28 +9,70 @@
     <p style="color: #00ff00; font-weight: bold;">Сборка успешно сохранена!</p> 
 {% endif %} 
  
-<form method="post"> 
-    {% csrf_token %} 
-    <div> 
-        <label for="id_cpu">Процессор:</label> 
-        {{ form.cpu }} 
-    </div> 
-    <div> 
-        <label for="id_gpu">Видеокарта:</label> 
-        {{ form.gpu }} 
-    </div> 
-    <div> 
-        <label for="id_ram">ОЗУ:</label> 
-        {{ form.ram }} 
-    </div> 
-    <div> 
-        <label for="id_storage">Хранилище:</label> 
-        {{ form.storage }} 
-    </div> 
-    <div> 
-        <label for="id_address">Адрес доставки:</label> 
-        {{ form.address }} 
-    </div> 
-    <button type="submit">Отправить сборку</button> 
+<form method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+
+  <fieldset>
+    <legend>Выберите процессор</legend>
+    {% for cpu in form.fields.cpu.queryset %}
+      <label>
+        <input type="radio"
+               name="cpu"
+               value="{{ cpu.id }}"
+               {% if form.data.cpu|stringformat:"s" == cpu.id|stringformat:"s" %}checked{% endif %}>
+        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width:100px;">
+        {{ cpu.name }}
+      </label><br>
+    {% endfor %}
+  </fieldset>
+
+  <fieldset>
+    <legend>Выберите видеокарту</legend>
+    {% for gpu in form.fields.gpu.queryset %}
+      <label>
+        <input type="radio"
+               name="gpu"
+               value="{{ gpu.id }}"
+               {% if form.data.gpu|stringformat:"s" == gpu.id|stringformat:"s" %}checked{% endif %}>
+        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width:100px;">
+        {{ gpu.name }}
+      </label><br>
+    {% endfor %}
+  </fieldset>
+
+  <fieldset>
+    <legend>Выберите оперативную память</legend>
+    {% for ram in form.fields.ram.queryset %}
+      <label>
+        <input type="radio"
+               name="ram"
+               value="{{ ram.id }}"
+               {% if form.data.ram|stringformat:"s" == ram.id|stringformat:"s" %}checked{% endif %}>
+        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width:100px;">
+        {{ ram.name }}
+      </label><br>
+    {% endfor %}
+  </fieldset>
+
+  <fieldset>
+    <legend>Выберите накопитель</legend>
+    {% for storage in form.fields.storage.queryset %}
+      <label>
+        <input type="radio"
+               name="storage"
+               value="{{ storage.id }}"
+               {% if form.data.storage|stringformat:"s" == storage.id|stringformat:"s" %}checked{% endif %}>
+        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width:100px;">
+        {{ storage.name }}
+      </label><br>
+    {% endfor %}
+  </fieldset>
+
+  <div>
+    {{ form.address.label_tag }}
+    {{ form.address }}
+  </div>
+
+  <button type="submit">Собрать ПК</button>
 </form> 
 {% endblock %} 
