--- a/pc_store/store/templates/store/configure_pc.html
+++ b/pc_store/store/templates/store/configure_pc.html
@@ -3,7 +3,7 @@
 {% block title %}Собрать ПК{% endblock %} 
  
 {% block content %}
-<h2 xmlns:form.data.storage>Соберите свой ПК</h2>
+<h2 xmlns:form.data.storage xmlns:form.data.cpu xmlns:form.data.gpu xmlns:form.data.ram >Соберите свой ПК</h2>
  
 {% if success %} 
     <p style="color: #00ff00; font-weight: bold;">Сборка успешно сохранена!</p> 
