--- a/pc_store/store/templates/store/configure_pc.html
+++ b/pc_store/store/templates/store/configure_pc.html
@@ -9,70 +9,57 @@
     <p style="color: #00ff00; font-weight: bold;">Сборка успешно сохранена!</p> 
 {% endif %} 
  
-<form method="post" enctype="multipart/form-data">
+<form method="post">
   {% csrf_token %}
 
   <fieldset>
-    <legend>Выберите процессор</legend>
+    <legend>Процессоры</legend>
     {% for cpu in form.fields.cpu.queryset %}
       <label>
-        <input type="radio"
-               name="cpu"
-               value="{{ cpu.id }}"
-               {% if form.data.cpu|stringformat:"s" == cpu.id|stringformat:"s" %}checked{% endif %}>
-        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width:30px;">
-        {{ cpu.name }}
-      </label><br>
+        <input type="checkbox" name="cpu" value="{{ cpu.id }}"
+               {% if cpu.id|stringformat:"s" in form.data.getlist:'cpu' %}checked{% endif %}>
+        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <div>{{ cpu.name }}</div>
+      </label>
     {% endfor %}
   </fieldset>
 
   <fieldset>
-    <legend>Выберите видеокарту</legend>
+    <legend>Видеокарты</legend>
     {% for gpu in form.fields.gpu.queryset %}
       <label>
-        <input type="radio"
-               name="gpu"
-               value="{{ gpu.id }}"
-               {% if form.data.gpu|stringformat:"s" == gpu.id|stringformat:"s" %}checked{% endif %}>
-        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width:30px;">
-        {{ gpu.name }}
-      </label><br>
+        <input type="checkbox" name="gpu" value="{{ gpu.id }}"
+               {% if gpu.id|stringformat:"s" in form.data.getlist:'gpu' %}checked{% endif %}>
+        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <div>{{ gpu.name }}</div>
+      </label>
     {% endfor %}
   </fieldset>
 
   <fieldset>
-    <legend>Выберите оперативную память</legend>
+    <legend>Оперативная память</legend>
     {% for ram in form.fields.ram.queryset %}
       <label>
-        <input type="radio"
-               name="ram"
-               value="{{ ram.id }}"
-               {% if form.data.ram|stringformat:"s" == ram.id|stringformat:"s" %}checked{% endif %}>
-        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width:30px;">
-        {{ ram.name }}
-      </label><br>
+        <input type="checkbox" name="ram" value="{{ ram.id }}"
+               {% if ram.id|stringformat:"s" in form.data.getlist:'ram' %}checked{% endif %}>
+        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <div>{{ ram.name }}</div>
+      </label>
     {% endfor %}
   </fieldset>
 
   <fieldset>
-    <legend>Выберите накопитель</legend>
+    <legend>Накопители</legend>
     {% for storage in form.fields.storage.queryset %}
       <label>
-        <input type="radio"
-               name="storage"
-               value="{{ storage.id }}"
-               {% if form.data.storage|stringformat:"s" == storage.id|stringformat:"s" %}checked{% endif %}>
-        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width:30px;">
-        {{ storage.name }}
-      </label><br>
+        <input type="checkbox" name="storage" value="{{ storage.id }}"
+               {% if storage.id|stringformat:"s" in form.data.getlist:'storage' %}checked{% endif %}>
+        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <div>{{ storage.name }}</div>
+      </label>
     {% endfor %}
   </fieldset>
 
-  <div>
-    {{ form.address.label_tag }}
-    {{ form.address }}
-  </div>
-
-  <button type="submit">Собрать ПК</button>
+  <button type="submit">Сохранить сборку</button>
 </form> 
 {% endblock %} 
