--- a/pc_store/store/templates/store/login.html
+++ b/pc_store/store/templates/store/login.html
@@ -4,9 +4,9 @@
  
 {% block content %} 
 <h2>Вход в систему</h2>
-<form action="{% url 'logout' %}" method="post">
+<form action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-info">Logout</button>
+    <button type="submit" class="btn btn-info">Login</button>
 </form> 
 {% endblock %} 
