--- a/pc_store/store/templates/store/change_password.html
+++ b/pc_store/store/templates/store/change_password.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'store/base.html' %}
+{% block content %}
+<h2>Сменить пароль</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Сменить</button>
+</form>
+<a href="{% url 'profile' %}">Назад</a>
+{% endblock %}
