--- a/pc_store/store/templates/store/login.html
+++ b/pc_store/store/templates/store/login.html
@@ -8,5 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-info">Login</button>
+<p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+
 </form> 
 {% endblock %} 
