--- a/pc_store/store/templates/store/password_reset_done.html
+++ b/pc_store/store/templates/store/password_reset_done.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "store/base.html" %}
+{% block title %}Письмо отправлено{% endblock %}
+{% block content %}
+<div class="form-container">
+    <h2>Проверьте почту</h2>
+    <p>Мы отправили письмо со ссылкой для восстановления пароля, если email был найден в системе.</p>
+    <a href="{% url 'login' %}">Назад ко входу</a>
+</div>
+{% endblock %}
