--- a/pc_store/store/templates/store/password_reset_complete.html
+++ b/pc_store/store/templates/store/password_reset_complete.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "store/base.html" %}
+{% block title %}Пароль обновлён{% endblock %}
+{% block content %}
+<div class="form-container">
+    <h2>Пароль успешно обновлён</h2>
+    <p>Теперь вы можете войти, используя новый пароль.</p>
+    <a href="{% url 'login' %}">Войти</a>
+</div>
+{% endblock %}
