--- a/pc_store/store/templates/store/password_reset_confirm.html
+++ b/pc_store/store/templates/store/password_reset_confirm.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "store/base.html" %}
+{% block title %}Установка нового пароля{% endblock %}
+{% block content %}
+<div class="form-container">
+    <h2>Установите новый пароль</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Сохранить пароль</button>
+    </form>
+</div>
+{% endblock %}
