--- a/pc_store/store/templates/store/configure_pc.html
+++ b/pc_store/store/templates/store/configure_pc.html
@@ -1,23 +1,17 @@
-{% extends 'store/base.html' %} 
- 
-{% block title %}Собрать ПК{% endblock %} 
- 
+{% extends 'store/base.html' %}
+{% block title %}Соберите свой ПК{% endblock %}
 {% block content %}
-<h2 xmlns:cpu.id>Соберите свой ПК</h2>
- 
-{% if success %} 
-    <p style="color: #00ff00; font-weight: bold;">Сборка успешно сохранена!</p> 
-{% endif %} 
- 
+<h2>Соберите свой ПК</h2>
+
 <form method="post">
   {% csrf_token %}
 
   <fieldset>
     <legend>Процессоры</legend>
-    {% for cpu in form.fields.cpu.queryset %}
+    {% for cpu in cpus %}
       <label>
-        <input type="checkbox" name="cpu[]" value="{{ cpu.id }}" {% if cpu.id|stringformat:"s" in selected_cpu %}checked{% endif %} >
-        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <input type="checkbox" name="cpu" value="{{ cpu.id }}">
+        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width:80px;display:block;margin:auto;">
         <div>{{ cpu.name }}</div>
       </label>
     {% endfor %}
@@ -25,11 +19,10 @@
 
   <fieldset>
     <legend>Видеокарты</legend>
-    {% for gpu in form.fields.gpu.queryset %}
+    {% for gpu in gpus %}
       <label>
-        <input type="checkbox" name="gpu[]" value="{{ gpu.id }}"
-               {% if gpu.id|stringformat:"s" in selected_gpu %}checked{% endif %}>
-        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <input type="checkbox" name="gpu" value="{{ gpu.id }}">
+        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width:80px;display:block;margin:auto;">
         <div>{{ gpu.name }}</div>
       </label>
     {% endfor %}
@@ -37,11 +30,10 @@
 
   <fieldset>
     <legend>Оперативная память</legend>
-    {% for ram in form.fields.ram.queryset %}
+    {% for ram in rams %}
       <label>
-        <input type="checkbox" name="ram[]" value="{{ ram.id }}"
-               {% if ram.id|stringformat:"s" in selected_ram %}checked{% endif %}>
-        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <input type="checkbox" name="ram" value="{{ ram.id }}">
+        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width:80px;display:block;margin:auto;">
         <div>{{ ram.name }}</div>
       </label>
     {% endfor %}
@@ -49,16 +41,15 @@
 
   <fieldset>
     <legend>Накопители</legend>
-    {% for storage in form.fields.storage.queryset %}
+    {% for storage in storages %}
       <label>
-        <input type="checkbox" name="storage[]" value="{{ storage.id }}"
-               {% if storage.id|stringformat:"s" in selected_storage %}checked{% endif %}>
-        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width: 80px; display:block; margin:auto;">
+        <input type="checkbox" name="storage" value="{{ storage.id }}">
+        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width:80px;display:block;margin:auto;">
         <div>{{ storage.name }}</div>
       </label>
     {% endfor %}
   </fieldset>
 
   <button type="submit">Сохранить сборку</button>
-</form> 
+</form>
 {% endblock %}
