--- a/pc_store/store/templates/store/configure_pc.html
+++ b/pc_store/store/templates/store/configure_pc.html
@@ -1,55 +1,38 @@
 {% extends 'store/base.html' %}
 {% block title %}Соберите свой ПК{% endblock %}
 {% block content %}
+
 <h2>Соберите свой ПК</h2>
+
+{% if success %}
+<p style="color: green; font-weight: bold;">Сборка успешно сохранена!</p>
+{% endif %}
 
 <form method="post">
   {% csrf_token %}
-
+  {% for section in component_sections %}
   <fieldset>
-    <legend>Процессоры</legend>
-    {% for cpu in cpus %}
-      <label>
-        <input type="checkbox" name="cpu" value="{{ cpu.id }}">
-        <img src="{{ cpu.image.url }}" alt="{{ cpu.name }}" style="max-width:80px;display:block;margin:auto;">
-        <div>{{ cpu.name }}</div>
-      </label>
-    {% endfor %}
+    <legend>{{ section.title }}</legend>
+    <table>
+      <tr>
+        {% for item in section.items %}
+        <td style="text-align: center; padding: 10px;">
+          <label>
+            <input type="checkbox" name="{{ section.name }}" value="{{ item.id }}">
+            <br>
+            <img src="{{ item.image.url }}" alt="{{ item.name }}" style="max-width: 80px;"><br>
+            {{ item.name }}
+          </label>
+          {% endfor %}
+        </td>
+        {% if forloop.counter|divisibleby:4 %}
+      </tr><tr>
+      {% endif %}
+      {% endfor %}
+    </tr>
+    </table>
   </fieldset>
 
-  <fieldset>
-    <legend>Видеокарты</legend>
-    {% for gpu in gpus %}
-      <label>
-        <input type="checkbox" name="gpu" value="{{ gpu.id }}">
-        <img src="{{ gpu.image.url }}" alt="{{ gpu.name }}" style="max-width:80px;display:block;margin:auto;">
-        <div>{{ gpu.name }}</div>
-      </label>
-    {% endfor %}
-  </fieldset>
-
-  <fieldset>
-    <legend>Оперативная память</legend>
-    {% for ram in rams %}
-      <label>
-        <input type="checkbox" name="ram" value="{{ ram.id }}">
-        <img src="{{ ram.image.url }}" alt="{{ ram.name }}" style="max-width:80px;display:block;margin:auto;">
-        <div>{{ ram.name }}</div>
-      </label>
-    {% endfor %}
-  </fieldset>
-
-  <fieldset>
-    <legend>Накопители</legend>
-    {% for storage in storages %}
-      <label>
-        <input type="checkbox" name="storage" value="{{ storage.id }}">
-        <img src="{{ storage.image.url }}" alt="{{ storage.name }}" style="max-width:80px;display:block;margin:auto;">
-        <div>{{ storage.name }}</div>
-      </label>
-    {% endfor %}
-  </fieldset>
-
-  <button type="submit">Сохранить сборку</button>
+  <button type="submit" class="submit-btn">Сохранить сборку</button>
 </form>
 {% endblock %}
