--- a/pc_store/store/static/store/css/styles.css
+++ b/pc_store/store/static/store/css/styles.css
@@ -91,6 +91,7 @@ form div {
     flex-direction: column;
     gap: 20px;
     text-decoration-color: #111111;
+    background-color: #111111;
 }
 
 .build-card {
