--- a/pc_store/store/templates/store/profile.html
+++ b/pc_store/store/templates/store/profile.html
@@ -13,7 +13,7 @@
 <section>
     <h3>Черновики сборок</h3>
     {% if drafts %}
-        <ul class="build-list">
+        <ul class="build-list" style="background-color: #111111">
             {% for build in drafts %}
                 <li>
                     {{ build }}<br>
