--- a/pc_store/store/templates/store/base.html
+++ b/pc_store/store/templates/store/base.html
@@ -40,6 +40,12 @@
 
 <footer>
     <p>&copy; 2025 TechForge. All rights reserved.</p>
+    <ul>
+        <li><a href="{% url 'about' %}"  style="color: inherit;text-decoration: none">О нас</a></li>
+        <li style="color: inherit;text-decoration: none"><a href="{% url 'contacts' %}" style="color: inherit;text-decoration: none">Наши контакты</a></li>
+        <li style="color: inherit;text-decoration: none"><a href="{% url 'faq' %}" style="color: inherit;text-decoration: none">FAQ</a></li>
+        <li style="color: inherit;text-decoration: none"><a href="{% url 'privacy_policy' %}" style="color: inherit;text-decoration: none">Privacy Policy</a></li>
+    </ul>
 </footer>
 </body> 
 </html> 
